Upd: connection to db, env

--- a/.env-example
+++ b/.env-example
@@ -1,1 +1,10 @@
 GITHUB_TOKEN_GIST=you_token_for_github_gist
+
+DATABASE_NAME=
+DATABASE_USER=
+DATABASE_PORT=5432
+DATABASE_HOST=localhost_or_docker_container
+DATABASE_PASSWORD=
+
+DATABASE_NAME_TEST=name_db_for_test
+DATABASE_PASSWORD_TEST=
